--- a/sunnyside-agency-landing-page-main/styles.css
+++ b/sunnyside-agency-landing-page-main/styles.css
@@ -26,9 +26,6 @@ a{
 #navbar{
     height: 100px;
 }
-.hide_menu{
-    overflow: hidden;
-}
 .nav_section{
     width: 100%;
     display: flex;
@@ -343,6 +340,9 @@ button{
         border-left: 30px solid transparent;
         border-bottom: 30px solid white;
     }
+    .nav_details.hide_menu{
+        margin-top: -400px;
+    }
     .nav_details{
         position: relative;
         display: flex;
@@ -506,6 +506,9 @@ button{
         height: 0;
         border-left: 30px solid transparent;
         border-bottom: 30px solid white;
+    }
+    .nav_details.hide_menu{
+        margin-top: -400px;
     }
     .nav_details{
         position: relative;
