--- a/intro-section-with-dropdown-navigation-main/styles.css
+++ b/intro-section-with-dropdown-navigation-main/styles.css
@@ -22,6 +22,7 @@ a:hover {
 }
 .main__body {
   width: 100%;
+  padding: 0 5% 10% 5%;
 }
 .navbar {
   display: flex;
@@ -105,28 +106,33 @@ a:hover {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 5% 7%;
+  /* padding: 5% 0; */
   /* margin: 7%; */
 }
 .sub__section1 {
-  width: 55%;
-  padding: 125px 50px 0 50px;
+  width: 60%;
+  padding: 125px 20px 0 105px;
 }
 .sub__section2 {
-  width: 45%;
+  width: 40%;
+}
+.sub__section2 div {
+  width: 100%;
   background-image: url("./images/image-hero-desktop.png");
-  background-size: 100%;
+  background-size: 80% 100%;
+  height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   /* padding-top: 50px; */
 }
 .sub__section1 h1 {
-  font-size: 73px;
-  margin-bottom: 50px;
+  font-size: 75px;
+  font-weight: 600;
+  margin-bottom: 10px;
   padding-right: 20px;
 }
 .sub__section1 p {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   padding-right: 120px;
 }
 .sub__section1 button {
@@ -136,14 +142,14 @@ a:hover {
   background: black;
   color: white;
   cursor: pointer;
-  margin-bottom: 190px;
+  margin-bottom: 60px;
 }
 .sub__section1 button:hover {
   background: white;
   color: black;
 }
 .sponspor__logo img {
-  height: 15px;
+  height: 20px;
   padding-right: 25px;
 }
 
@@ -256,6 +262,9 @@ a:hover {
   }
   .sub__section2 {
     width: 100%;
+  }
+  .sub__section2 div {
+    width: 100%;
     background-image: url("./images/image-hero-mobile.png");
     background-size: 100%;
     background-position: center;
@@ -263,9 +272,9 @@ a:hover {
     padding-top: 80%;
   }
   .sub__section1 h1 {
-    font-size: 50px;
+    font-size: 35px;
     margin: 50px 0 30px 0;
-    padding-right: 20px;
+    padding-right: 0;
   }
   .sub__section1 p {
     margin-bottom: 30px;
@@ -273,21 +282,17 @@ a:hover {
   }
   .sub__section1 button {
     width: 40%;
-    padding: 10px 20px;
-    /* border: none; */
-    border-radius: 10px;
-    background: black;
-    color: white;
-    cursor: pointer;
-    margin-bottom: 160px;
+    margin-bottom: 40px;
   }
-  .sub__section1 button:hover {
-    background: white;
-    color: black;
+  .sponspor__logo {
+    width: 100%;
   }
   .sponspor__logo img {
-    height: 15px;
+    height: 16px;
     padding-right: 10px;
+  }
+  .sponspor__logo img:last-child {
+    padding-right: 0;
   }
   .overlay {
     top: 0;
