--- a/intro-section-with-dropdown-navigation-main/styles.css
+++ b/intro-section-with-dropdown-navigation-main/styles.css
@@ -111,7 +111,7 @@ a:hover {
 }
 .sub__section1 {
   width: 60%;
-  padding: 125px 20px 0 105px;
+  padding: 125px 20px 0 110px;
 }
 .sub__section2 {
   width: 40%;
@@ -119,7 +119,7 @@ a:hover {
 .sub__section2 div {
   width: 100%;
   background-image: url("./images/image-hero-desktop.png");
-  background-size: 80% 100%;
+  background-size: 100% 100%;
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -127,22 +127,24 @@ a:hover {
 }
 .sub__section1 h1 {
   font-size: 75px;
-  font-weight: 600;
-  margin-bottom: 10px;
-  padding-right: 20px;
+  font-weight: 900;
+  margin-bottom: 30px;
+  padding-right: 20%;
 }
 .sub__section1 p {
-  margin-bottom: 20px;
-  padding-right: 120px;
+  color: rgb(0, 0, 0, 0.7);
+  font-size: 18px;
+  margin-bottom: 50px;
+  padding-right: 160px;
 }
 .sub__section1 button {
-  padding: 10px 20px;
-  /* border: none; */
+  font-size: 18px;
+  padding: 12px 20px;
   border-radius: 10px;
   background: black;
   color: white;
   cursor: pointer;
-  margin-bottom: 60px;
+  margin-bottom: 120px;
 }
 .sub__section1 button:hover {
   background: white;
@@ -281,7 +283,7 @@ a:hover {
     padding: 0 15px;
   }
   .sub__section1 button {
-    width: 40%;
+    width: 45%;
     margin-bottom: 40px;
   }
   .sponspor__logo {
