--- a/intro-section-with-dropdown-navigation-main/styles.css
+++ b/intro-section-with-dropdown-navigation-main/styles.css
@@ -171,7 +171,7 @@ a:hover {
     transform: translateX(100%);
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     width: 60%;
     background-color: white;
     z-index: 100;
