--- a/intro-section-with-dropdown-navigation-main/styles.css
+++ b/intro-section-with-dropdown-navigation-main/styles.css
@@ -239,12 +239,8 @@ a:hover {
     padding: 5%;
   }
   .open-menu {
-    width: 100%;
-    height: 70%;
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-    /* padding: 5%; */
+    display: block;
+    margin-left: auto;
   }
   .main__section {
     display: flex;
